--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.3
+  test: ^1.24.1
+  bloc_test: ^9.1.4
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
